# ddm

./: .gitmodules  Cargo.toml  README.md  note
coproc/: .gitignore
coproc/lib/: Cargo.toml
coproc/lib/src/: ds.rs  lib.rs
coproc/program/: note
coproc/program/src/: main.rs
coproc/research/: fetch_usdc_transfers.py
coproc/script/: Cargo.toml  build.rs
coproc/script/artifact/: usdc_transfers.json
coproc/sigs/lib/: Cargo.toml
coproc/sigs/lib/src/: lib.rs
coproc/sigs/program/: Cargo.toml
coproc/sigs/program/src/: main.rs
coproc/sigs/script/: Cargo.toml
examples/: hash.rs  proof.rs
gnarking/: .gitignore  CLAUDE.md  go.mod  make_test.py
gnarking/circuit/: eddsa.go  settlement.go  settlement_test.go  settlement_util.go
gnarking/cmd/eddsa_demo/: main.go
gnarking/cmd/settlement_demo/: main.go
gnarking/ddn/: tx.sh
gnarking/ddn/script/: verify.s.sol
gnarking/ddn/src/: settlement_verifier_8.sol
gnarking/ddn/test/: settlement_verifier_8.sol
gnarking/src/: main.go
micropay_gateway/: Cargo.toml  README.md  test.sh
micropay_gateway/protocol/: CLAUDE.md  Cargo.toml
micropay_gateway/protocol/src/: coracle.rs  ctrack.rs  engine.rs  lib.rs  obalance.rs  settle.rs  traits.rs  vauth.rs  voucher.rs
micropay_gateway/protocol/src/v2/: coracle.rs  engine.rs  voucher.rs
micropay_gateway/src/: engine.rs  main.rs
research/: install.sh
research/src/: client_vendor.py  efficient_batch.py  safety.py
src/: hash.rs  lib.rs  main.rs  pay.rs
