[package]
name = "micropay_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "./protocol" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
anyhow = "1.0.100"
axum = "0.8.6"
hyper = "1.8.0"
parking_lot = "0.12.5"

[dev-dependencies]
assert_matches = "1.5.0"
